# src/controllers/subject.js
@@ -2,10 +2,18 @@ import db from "../models"
 
 export const subject = (req, res) => {
     const {
-        id = "", subject_name = "", created_at = ""
+        create_by = "", subject_name = "", created_at = ""
     } = req.body;
-    db.sequelize.query(`insert into users(id,subject_name,created_at,
-        "${id}","${subject_name}","${created_at}","
- )`).then((results) => res.json({ sucsess: true, results: results }))
+    db.sequelize.query(`insert into subject(subject_name,created_at,create_by)
+    VALUES("${subject_name}","${created_at}","${create_by}")`)
+        .then((results) => res.json({ sucsess: true, results: results }))
         .catch((err) => console.log(err))
 }   
+
+export const getSubject = (req, res) => {   
+     
+    db.sequelize.query(`SELECT subject_name,created_at,create_by FROM subject`)
+        .then((results) => res.json({ sucsess: true, results: results }))   
+        .catch((err) => console.log(err))
+}   
+
