# src/routes/students.js
@@ -1,6 +1,7 @@
-const { students } = require("../controllers/students")
+const { students, getStudents } = require("../controllers/students")
 
 
 module.exports = (app) => {
     app.post("/students",students)
+    app.get("/students/get",getStudents)
 }
