# src/routes/subject.js
@@ -1,6 +1,7 @@
-const { subject } = require("../controllers/subject")
+const { subject, getSubject } = require("../controllers/subject")
 
 
 module.exports = (app) => {
     app.post("/subject",subject)
+    app.get("/subject/get",getSubject)
 }
